--- a/poc_sandboxes/dart_parser/dart_parser/pubspec.yaml
+++ b/poc_sandboxes/dart_parser/dart_parser/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 # Add regular dependencies here.
 dependencies:
   archive: ^3.4.10
+  json_annotation: ^4.8.1
   xml: ^6.5.0
+  xml2json: ^6.2.3
   # path: ^1.8.0
 
 dev_dependencies:
